# CloudGooseStorage

./: CMakeLists.txt  Doxyfile  README.md  wt_config.xml
docroot/: cloud-goose-storage.css
docs/doxygen/html/: _create_account_page_8h_source.html  _file_8h_source.html  _file_storage_page_8h_source.html  _file_view_page_8h_source.html  _file_widget_8h_source.html  _folder_8h_source.html  _folder_storage_page_8h_source.html  _folder_widget_8h_source.html  _login_page_8h_source.html  _sharing_link_8h_source.html  _storage_application_8h_source.html  _storage_element_8h_source.html  _user_8h_source.html  annotated.html  class_create_account_page-members.html  class_create_account_page.html  class_file-members.html  class_file.html  class_file_storage_page-members.html  class_file_storage_page.html  class_file_view_page-members.html  class_file_view_page.html  class_file_view_page_1_1_parent_folder_button-members.html  class_file_view_page_1_1_parent_folder_button.html  class_file_widget-members.html  class_file_widget.html  class_folder-members.html  class_folder.html  class_folder_storage_page-members.html  class_folder_widget.html  (+21 more)
src/: CreateAccountPage.cpp  CreateAccountPage.h  File.cpp  File.h  FileStoragePage.cpp  FileStoragePage.h  FileViewPage.cpp  FileViewPage.h  FileWidget.cpp  FileWidget.h  Folder.cpp  Folder.h  FolderStoragePage.cpp  FolderStoragePage.h  FolderWidget.cpp  FolderWidget.h  LoginPage.cpp  LoginPage.h  SharingLink.cpp  SharingLink.h  StorageApplication.cpp  StorageApplication.h  StorageElement.cpp  StorageElement.h  User.cpp  User.h  main.cpp
(+25 files in other folders)
